--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,11 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Relative paths\n",
+    "current_dir = Path.cwd()\n",
+    "data_dir = current_dir / \"data\"\n",
+    "\n",
+    "# Get files data\n",
+    "files = data_dir.glob(\"*.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df(data_dir:Path) -> pd.DataFrame:\n",
+    "    files = data_dir.glob(\"*csv\")\n",
+    "    \n",
+    "    dfs = []\n",
+    "    for file in files:\n",
+    "        df = pd.read_csv(file)\n",
+    "        dfs.append(df)\n",
+    "    result_df = pd.concat(dfs, ignore_index=True)\n",
+    "    \n",
+    "    return result_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_df(data_dir=data_dir)"
    ]
   },
   {
@@ -35,7 +78,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "64ef11595e55d1c8606c3feaf13020df4f9a697ebadebed49ad8b052ca229b0b"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
